[gd_scene load_steps=40 format=3 uid="uid://c7auuy8faw3do"]

[ext_resource type="Script" uid="uid://b7wovh0t2itor" path="res://modules/track/track_renderer_3d.gd" id="1_66fm1"]
[ext_resource type="Script" uid="uid://dw0k251mokf2t" path="res://scenes/sim/sim_3d.gd" id="1_qbjwp"]
[ext_resource type="Resource" uid="uid://dhvdn8clqrgbi" path="res://assets/tracks/basic_loop.tres" id="2_8rtlt"]
[ext_resource type="Script" uid="uid://boxndawm4vmgs" path="res://modules/simulation/simulation_controller.gd" id="4_40j5w"]
[ext_resource type="Shader" uid="uid://d15ccd7um3ja1" path="res://assets/shader/tilt_shift.gdshader" id="5_7pner"]
[ext_resource type="FontFile" uid="uid://dgcockbmef8kw" path="res://assets/font/RacingSansOne-Regular.ttf" id="6_67n6g"]
[ext_resource type="FontFile" uid="uid://c4ds4nrjv5wpv" path="res://assets/font/Inter-Medium.otf" id="7_gm3vh"]
[ext_resource type="ArrayMesh" uid="uid://3gkva8b8ypha" path="res://assets/model/environment/plant_bushSmall.obj" id="9_pfj6h"]
[ext_resource type="Script" uid="uid://cnyx770l7mts6" path="res://modules/car/car_component.gd" id="9_s4ecn"]
[ext_resource type="Script" uid="uid://ckb8ujhpc38gl" path="res://modules/spareparts/motor/motor_hyper_dash_3.gd" id="10_3gsmu"]
[ext_resource type="Script" uid="uid://4mn646pcobam" path="res://scenes/sim/sim_ui_3d.gd" id="10_pfj6h"]
[ext_resource type="Script" uid="uid://c58jhk64ii2y0" path="res://modules/spareparts/body/body_lightweight_carbon.gd" id="10_pot30"]
[ext_resource type="ArrayMesh" uid="uid://curlx4dl13mkf" path="res://assets/model/environment/plant_bushTriangle.obj" id="10_pt0l3"]
[ext_resource type="Script" uid="uid://kq0pff0xhghq" path="res://modules/spareparts/roller/roller_standard_kit.gd" id="11_3gsmu"]
[ext_resource type="Script" uid="uid://dn33s4el2mvpf" path="res://modules/spareparts/battery/battery_wildcard.gd" id="12_rmpwp"]
[ext_resource type="ArrayMesh" uid="uid://ctljda5xyeps1" path="res://assets/model/environment/stone_largeF.obj" id="12_st2ln"]
[ext_resource type="Script" uid="uid://8g8uxromlya1" path="res://modules/spareparts/wheel/wheel_standard_kit.gd" id="13_3gsmu"]
[ext_resource type="ArrayMesh" uid="uid://bi6008iq5ciqm" path="res://assets/model/environment/tree_cone.obj" id="13_pfj6h"]
[ext_resource type="Texture2D" uid="uid://byvph1xprsher" path="res://assets/ui/ic_car.png" id="13_pt0l3"]
[ext_resource type="Script" uid="uid://ccdjulgenb5hh" path="res://scenes/sim/start_machine_button.gd" id="18_4ey6a"]
[ext_resource type="Shader" uid="uid://dx8jkuhw2uv4s" path="res://assets/shader/vignette.gdshader" id="21_viiki"]

[sub_resource type="Gradient" id="Gradient_mf771"]
interpolation_color_space = 2
offsets = PackedFloat32Array(0.55641025, 0.94871795, 1)
colors = PackedColorArray(0.24313726, 0.6666667, 0.68235296, 1, 0.54901963, 0.9372549, 0.7137255, 1, 0.76862746, 0.9411765, 0.7607843, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_s4ecn"]
noise_type = 4
frequency = 0.5
fractal_octaves = 4
fractal_lacunarity = 1.0
fractal_gain = 0.2
domain_warp_enabled = true
domain_warp_amplitude = 22.6
domain_warp_frequency = 0.15
domain_warp_fractal_type = 2
domain_warp_fractal_octaves = 4
domain_warp_fractal_lacunarity = 5.2
domain_warp_fractal_gain = 0.4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_pfj6h"]
noise = SubResource("FastNoiseLite_s4ecn")
color_ramp = SubResource("Gradient_mf771")
seamless = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_40j5w"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.43952763, 0.45497167, 0.40057012, 1)
albedo_texture = SubResource("NoiseTexture2D_pfj6h")
albedo_texture_force_srgb = true
roughness = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_8rtlt"]
material = SubResource("StandardMaterial3D_40j5w")
size = Vector2(20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_st2ln"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.14511335, 0.37561956, 0.3326508, 1)
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pt0l3"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.39607844, 0.6039216, 0.57254905, 1)
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s0s05"]
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.47765565, 0.37599576, 0.2714786, 1)
roughness = 0.0

[sub_resource type="Environment" id="Environment_66fm1"]
background_color = Color(0.4217312, 0.42173126, 0.42173123, 1)
tonemap_mode = 3
sdfgi_enabled = true
glow_enabled = true
glow_bloom = 0.1
fog_enabled = true
volumetric_fog_enabled = true
adjustment_enabled = true
adjustment_brightness = 1.03
adjustment_contrast = 0.59
adjustment_saturation = 1.31

[sub_resource type="Theme" id="Theme_i725u"]
default_font = ExtResource("7_gm3vh")
CheckButton/colors/font_color = Color(0, 0, 0, 1)
CheckButton/colors/font_hover_color = Color(0.08078321, 0.080783345, 0.08078361, 1)
CheckButton/colors/font_hover_pressed_color = Color(0.174626, 0.17462596, 0.17462596, 1)
CheckButton/colors/font_pressed_color = Color(0.11858138, 0.11858138, 0.11858138, 1)

[sub_resource type="Gradient" id="Gradient_s4ecn"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pfj6h"]
gradient = SubResource("Gradient_s4ecn")
width = 32
height = 111
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_pfj6h"]
colors = PackedColorArray(1, 1, 1, 0, 0.9219858, 0.96522385, 0.8423311, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pt0l3"]
gradient = SubResource("Gradient_pfj6h")
width = 32
height = 111

[sub_resource type="Gradient" id="Gradient_pt0l3"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.49243402, 0.7584264, 0.29323804, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s0s05"]
gradient = SubResource("Gradient_pt0l3")
width = 32
height = 111
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_67n6g"]
shader = ExtResource("5_7pner")
shader_parameter/limit = 0.3050000144875
shader_parameter/blur = 5.174000245765

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0jbqk"]
shader = ExtResource("21_viiki")
shader_parameter/inner_radius = 0.5
shader_parameter/outer_radius = 0.9
shader_parameter/vignette_strength = 0.7
shader_parameter/dither_strength = 0.03
shader_parameter/vignette_color = Color(0.87692463, 0.87692463, 0.87692463, 1)

[node name="Sim3d" type="Node"]

[node name="SimulationController" type="Node" parent="."]
script = ExtResource("4_40j5w")
metadata/_custom_type_script = "uid://boxndawm4vmgs"

[node name="Simulation" type="Node3D" parent="." node_paths=PackedStringArray("renderer", "sim", "car_build")]
script = ExtResource("1_qbjwp")
renderer = NodePath("TrackRenderer3D")
sim = NodePath("../SimulationController")
car_build = NodePath("../Car/CarComponent")

[node name="Camera3D" type="Camera3D" parent="Simulation"]
transform = Transform3D(0.94203734, -0.16166176, 0.29399192, -0.23351073, 0.31327865, 0.9205049, -0.24091184, -0.9358002, 0.25737044, 2.6, 4, 2.1)
current = true
fov = 42.0
size = 9.003

[node name="TrackRenderer3D" type="Node3D" parent="Simulation"]
script = ExtResource("1_66fm1")
track = ExtResource("2_8rtlt")

[node name="Environment" type="Node3D" parent="Simulation"]

[node name="Grass" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2998085, 0.1)
mesh = SubResource("PlaneMesh_8rtlt")
skeleton = NodePath("../..")

[node name="PlantBushSmall" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.206008, -0.31234062, -0.7355652)
mesh = ExtResource("9_pfj6h")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_st2ln")

[node name="PlantBushTriangle" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7306538, -0.31234062, -0.29608405)
mesh = ExtResource("10_pt0l3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_pt0l3")

[node name="PlantBushTriangle2" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.8984241, -0.31234062, 1.5675262)
mesh = ExtResource("10_pt0l3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_pt0l3")

[node name="StoneLargeF" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.79857063, -0.31234062, -1.4079404)
mesh = ExtResource("12_st2ln")
skeleton = NodePath("../../..")

[node name="StoneLargeF2" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.061166, -0.31234062, 2.4443521)
mesh = ExtResource("12_st2ln")
skeleton = NodePath("../../..")

[node name="TreeCone" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9086037, -0.31234062, -0.4968921)
mesh = ExtResource("13_pfj6h")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s0s05")
surface_material_override/1 = SubResource("StandardMaterial3D_st2ln")

[node name="TreeCone5" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.513587, -0.31234062, 0.37676013)
mesh = ExtResource("13_pfj6h")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s0s05")
surface_material_override/1 = SubResource("StandardMaterial3D_st2ln")

[node name="TreeCone2" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3750434, -0.31234062, -0.35652566)
mesh = ExtResource("13_pfj6h")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s0s05")
surface_material_override/1 = SubResource("StandardMaterial3D_st2ln")

[node name="TreeCone4" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.7678852, -0.31234062, 0.32197452)
mesh = ExtResource("13_pfj6h")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s0s05")
surface_material_override/1 = SubResource("StandardMaterial3D_st2ln")

[node name="TreeCone3" type="MeshInstance3D" parent="Simulation/Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6660321, -0.31234062, 2.9371872)
mesh = ExtResource("13_pfj6h")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_s0s05")
surface_material_override/1 = SubResource("StandardMaterial3D_st2ln")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Simulation/Environment"]
environment = SubResource("Environment_66fm1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Simulation/Environment"]
transform = Transform3D(-0.3778408, -0.34383857, 0.8596577, 0, 0.9284858, 0.37136784, -0.92587054, 0.14031793, -0.35081983, 0, 0, 0)
light_color = Color(0.8658815, 0.8658815, 0.8658814, 1)
light_energy = 0.25
shadow_enabled = true

[node name="Car" type="Node" parent="."]

[node name="CarComponent" type="Node" parent="Car"]
script = ExtResource("9_s4ecn")
body_sparepart = ExtResource("10_pot30")
motor_sparepart = ExtResource("10_3gsmu")
roller_sparepart = ExtResource("11_3gsmu")
battery_sparepart = ExtResource("12_rmpwp")
wheel_sparepart = ExtResource("13_3gsmu")
metadata/_custom_type_script = "uid://cnyx770l7mts6"

[node name="UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("battery_indicator", "controller")]
script = ExtResource("10_pfj6h")
battery_indicator = NodePath("Battery")
controller = NodePath("../SimulationController")

[node name="BoxContainer" type="BoxContainer" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -121.0
offset_top = 17.0
offset_right = -22.0
offset_bottom = 43.0
grow_horizontal = 0
theme_override_constants/separation = -2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/BoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(1, 0.25, 0.2624998, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("6_67n6g")
text = "TINY"
fit_content = true
scroll_active = false
horizontal_alignment = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="UI/BoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.19999999, 0.32000005, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/normal_font = ExtResource("6_67n6g")
text = "GEARS"
fit_content = true
scroll_active = false
horizontal_alignment = 2

[node name="Telemetry" type="RichTextLabel" parent="UI"]
offset_left = 239.0
offset_top = 596.0
offset_right = 1130.0
offset_bottom = 637.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_gm3vh")
text = "telemetry texts"

[node name="StartButtonGroup" type="BoxContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -99.0
offset_right = 197.0
grow_vertical = 0
theme = SubResource("Theme_i725u")

[node name="Battery" type="TextureProgressBar" parent="UI"]
offset_left = 33.0
offset_top = 520.0
offset_right = 75.0
offset_bottom = 640.0
step = 0.1
allow_greater = true
fill_mode = 3
texture_under = SubResource("GradientTexture2D_pfj6h")
texture_over = SubResource("GradientTexture2D_pt0l3")
texture_progress = SubResource("GradientTexture2D_s0s05")

[node name="CheckButton" type="CheckButton" parent="UI" node_paths=PackedStringArray("sim", "controller3d")]
offset_left = 93.0
offset_top = 587.0
offset_right = 169.0
offset_bottom = 631.0
script = ExtResource("18_4ey6a")
sim = NodePath("../../SimulationController")
controller3d = NodePath("../../Simulation")
car_id = "rapidash"

[node name="TextureButton" type="TextureButton" parent="UI"]
modulate = Color(0.13464913, 0.1346491, 0.1346491, 1)
offset_left = 1065.0
offset_top = 561.0
offset_right = 1129.0
offset_bottom = 625.0
texture_normal = ExtResource("13_pt0l3")
ignore_texture_size = true
stretch_mode = 5

[node name="FXTiltShift" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_67n6g")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FXVignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_0jbqk")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
